# composefs-rs

./: .gitignore  BUG.md  Cargo.toml  Containerfile  Justfile  README.md  TODO-local.md
.config/: nextest.toml
.github/workflows/: bootc-revdep.yml  ci.yml  examples.yml  publish.yml  rust.yml
bootc/: Justfile
ci/: fixture-images.txt
crates/cfsctl/: Cargo.toml
crates/cfsctl/src/: lib.rs  main.rs
crates/composefs/: Cargo.toml
crates/composefs-boot/src/: bootloader.rs  cmdline.rs  selabel.rs  write_boot.rs
crates/composefs-cli/: Cargo.toml
crates/composefs-cli/src/: lib.rs  main.rs
crates/composefs-cstorage/: Cargo.toml
crates/composefs-cstorage/src/: lib.rs  userns_helper.rs
crates/composefs-ctl/: Cargo.toml
crates/composefs-ctl/src/: composefs_info.rs  (+5 more)
crates/composefs-erofs-debug/: Cargo.toml
crates/composefs-fuse/: Cargo.toml
crates/composefs-http/: Cargo.toml
crates/composefs-integration-tests/: Cargo.toml
crates/composefs-oci/: Cargo.toml
crates/composefs-splitfdstream/: Cargo.toml
crates/composefs-storage/: Cargo.toml
crates/cstorage/: Cargo.toml
crates/integration-tests/: Cargo.toml
crates/integration-tests/src/: cleanup.rs  lib.rs  main.rs
crates/integration-tests/src/tests/: cli.rs  cstor.rs  privileged.rs
crates/splitfdstream/: Cargo.toml
doc/: repository.md
doc/plans/: oci-sealing-impl.md  oci-sealing-spec.md
examples/uki/: Containerfile
examples/unified/: Containerfile
examples/unified-secureboot/: Containerfile
src/: dumpfile.rs  filesystem_ops.rs  fs.rs  selabel.rs  tree.rs
src/erofs/: writer.rs
src/oci/: mod.rs
tests/: mkfs.rs  test-openssl-sign.sh
(+51 files in other folders)
