[package]
name = "integration-tests"
version = "0.0.0"
edition.workspace = true
license.workspace = true
publish = false
description = "Integration tests for composefs-rs (not published)"

# The main integration test binary
[[bin]]
name = "integration-tests"
path = "src/main.rs"

[[bin]]
name = "test-cleanup"
path = "src/cleanup.rs"

[dependencies]
anyhow = "1"
libtest-mimic = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# This crate doesn't follow the same linting rules
[lints.rust]
missing_docs = "allow"
missing_debug_implementations = "allow"
